# pink-music-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
pink_music_bot/: __main__.py  bot.py  config.py  constants.py  locale_parser.py  priority_semaphore.py  user_locker.py
pink_music_bot/commands/: activate.py  botstatus.py  clearme.py  countries.py  download.py  fourk.py  giveaway.py  givememershipdays.py  help.py  lock.py  lyrics.py  me.py  membership.py  ping.py  privacy.py  revokemembership.py  search.py  searchcountry.py  songcodec.py  start.py  uncache.py
pink_music_bot/database/: __init__.py  database.py  music_video.py  song.py  user.py
pink_music_bot/locale/: en.yaml  ja.yaml  pt.yaml
