[project]
name = "pink-music-bot"
version = "0.0.1"
description = "Pink Music Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomysql>=0.3.2",
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.3",
    "gamdl",
    "pyrofork>=2.3.68",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "tgcrypto>=1.2.5",
]

[tool.uv.sources]
gamdl = { url = "https://github.com/glomatico/gamdl/archive/refs/heads/main.zip" }
